--- a/crosscoder/compute_latent_stats.ipynb
+++ b/crosscoder/compute_latent_stats.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "418850b3-c72d-4887-bece-c2804d6ab7db",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_1555590/1319403643.py:2: FutureWarning: In the future `np.bool` will be defined as the corresponding NumPy scalar.\n",
-      "  if not hasattr(np, \"bool\"):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "if not hasattr(np, \"bool\"):\n",
@@ -23,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6cf96600-c99c-4579-8eb2-72e4e7a3196a",
    "metadata": {},
    "outputs": [],
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "975a8e34-9617-4ba6-80ee-249867d6ba2b",
    "metadata": {},
    "outputs": [],
@@ -78,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "10d5c327-967a-45b3-bd2e-869a598863a5",
    "metadata": {},
    "outputs": [],
@@ -116,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "69115d75-5abe-4e6f-b442-bd8311dc9bd5",
    "metadata": {},
    "outputs": [],
@@ -197,17 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bc98bd44-2b8d-45ed-96e7-fe4968b68045",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict_model_path = \"/pscratch/sd/r/ritesh11/temp_dir/crosscoder_checkpoints/Qwen3-1.7B-L20-k100-lr1e-04-ep2-run_1-Crosscoder/checkpoint_90000.pt\""
+    "dict_model_path = \"crosscoder_checkpoints/Qwen3-1.7B-L20-k100-lr1e-04-ep2-run_1-Crosscoder/checkpoint_90000.pt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f44639a8-ce50-4a3c-9643-ff255da22696",
    "metadata": {},
    "outputs": [],
@@ -219,42 +210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c5d7aa4b-5475-4ff3-a223-697e49c06070",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading true cache from model_activations/base/MATS_true_processed/test/layer_20_out and model_activations/finetune/MATS_true_processed/test/layer_20_out\n",
-      "Loading false cache from model_activations/base/MATS_false_processed/test/layer_20_out and model_activations/finetune/MATS_false_processed/test/layer_20_out\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/global/homes/r/ritesh11/.conda/envs/myenv/lib/python3.10/site-packages/dictionary_learning/cache.py:773: FutureWarning: submodule_name parameter will be required in future versions. Please specify the submodule name when creating ActivationCache instances and specify the store_dir without the submodule folder.\n",
-      "  self.activation_cache_1 = ActivationCache(store_dir_1, submodule_name)\n",
-      "/global/homes/r/ritesh11/.conda/envs/myenv/lib/python3.10/site-packages/dictionary_learning/cache.py:774: FutureWarning: submodule_name parameter will be required in future versions. Please specify the submodule name when creating ActivationCache instances and specify the store_dir without the submodule folder.\n",
-      "  self.activation_cache_2 = ActivationCache(store_dir_2, submodule_name)\n",
-      "100%|██████████| 4007/4007 [08:40<00:00,  7.69it/s]\n",
-      "100%|██████████| 3656/3656 [07:47<00:00,  7.82it/s]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'results' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 20\u001b[0m\n\u001b[1;32m      8\u001b[0m max_activations_true, frequencies_true, total_tokens_true \u001b[38;5;241m=\u001b[39m compute_stats(\n\u001b[1;32m      9\u001b[0m     crosscoder_model, true_dataset, device, batch_size, num_workers\n\u001b[1;32m     10\u001b[0m )\n\u001b[1;32m     11\u001b[0m max_activations_false, frequencies_false, total_tokens_false \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m     12\u001b[0m     compute_stats(\n\u001b[1;32m     13\u001b[0m         crosscoder_model,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     18\u001b[0m     )\n\u001b[1;32m     19\u001b[0m )\n\u001b[0;32m---> 20\u001b[0m \u001b[43mresults\u001b[49m[split] \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmax_activations_true\u001b[39m\u001b[38;5;124m\"\u001b[39m: max_activations_true\u001b[38;5;241m.\u001b[39mtolist(),\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmax_activations_false\u001b[39m\u001b[38;5;124m\"\u001b[39m: max_activations_false\u001b[38;5;241m.\u001b[39mtolist(),\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfrequencies_true\u001b[39m\u001b[38;5;124m\"\u001b[39m: frequencies_true\u001b[38;5;241m.\u001b[39mtolist(),\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfrequencies_false\u001b[39m\u001b[38;5;124m\"\u001b[39m: frequencies_false\u001b[38;5;241m.\u001b[39mtolist(),\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtotal_tokens_true\u001b[39m\u001b[38;5;124m\"\u001b[39m: total_tokens_true,\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtotal_tokens_false\u001b[39m\u001b[38;5;124m\"\u001b[39m: total_tokens_false,\n\u001b[1;32m     27\u001b[0m }\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'results' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "crosscoder_model = load_dictionary_model(dict_model_path).to(device)\n",
     "for split in [\"test\"]:\n",
@@ -287,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "dffa7522-3201-44eb-a583-50784e268ebd",
    "metadata": {},
    "outputs": [],
@@ -304,28 +263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e6bbee8c-8c15-4093-b7a5-69eed8d7109d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "65536"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(results['test']['max_activations_true'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ce84063a-87c8-4b1c-9e5f-86d238061fd1",
    "metadata": {},
    "outputs": [],
@@ -335,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d7c1957c-40b1-4896-a155-e13a3a06dfaa",
    "metadata": {},
    "outputs": [],
@@ -345,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6429541a-e57b-4740-8452-63a263d41795",
    "metadata": {},
    "outputs": [],
@@ -355,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "d53313bf-47e6-4ff0-b850-6a16e6fd78d9",
    "metadata": {},
    "outputs": [],
@@ -374,9 +322,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -388,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
